Produce HTML bugs

--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
 
         <ul class="nav-list hidden" role="list">
           <li>
-            <a href="#hero-section">Hello</a>
+            <a href="#">Hello</a>
           </li>
           <li>
-            <a href="#project-section">Portfolio</a>
+            <a href="#">Portfolio</a>
           </li>
           <li>
-            <a href="#about-section">About</a>
+            <a href="#">About</a>
           </li>
           <li>
-            <a href="#contact-section">Contact</a>
+            <a href="#">Contact</a>
           </li>
         </ul>
       </nav>
@@ -468,7 +468,7 @@
 
             <li class="social-link-item">
               <a href="#">
-                <img src="./assets/footer-section/ic_medium.svg" alt="Medium" />
+                <img src="./assets/footer-section/ic_medium.svg" />
               </a>
             </li>
 
@@ -480,9 +480,6 @@
                 />
               </a>
             </li>
-          </ul>
-        </div>
-      </footer>
-    </main>
+      </main>
   </body>
 </html>
