Setup project, produce more bugs

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <header class="header-section flex">
       <nav class="nav-bar">
         <button type="button" class="menu-btn">
-          <img src="./assets/icons/menu.svg" alt="menu" />
-          <img class="hidden" src="./assets/menu/cancel.svg" alt="cancel" />
+          <img class="hidden" src="./assets/icons/menu.svg" alt="menu" />
+          <img src="./assets/menu/cancel.svg" alt="cancel" style="color: red;"/>
         </button>
 
         <ul class="nav-list hidden" role="list">
